ansible/roles/kubernetes/prepare_kubernetes/templates/kubernetes/bases/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gamex-gateway
  namespace: gamex
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.local.io"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: gamex-cert
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gamex-virutal-service
  namespace: gamex
spec:
  hosts:
  - "*"
  gateways:
  - gamex-gateway
  http:
  - match:
    - uri:
        prefix: /auth/
    route:
    - destination:
        host: keycloak-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-service
        port:
          number: 80
